<resources>
    <string name="app_name">PAICo.</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forget your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_day">Born Date</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_send_to_your_phone_number">confirmation send to your phone number</string>
    <string name="enter_confirm_code">Enter Confirm Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="_50">60</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer_activity">drawer_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="map">Map</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="description">Description:</string>
    <string name="suggestions">Suggestions</string>
    <string name="places_you_should_see">Places you should see:</string>
    <string name="place_name">place name</string>
    <string name="place_info_form">Place name: %s \n\n Opening Hour: %s \n\n Administration: %s \n\n Administration Number: %s </string>
    <string name="some_where">some where</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="live_info">Live info</string>
    <string name="directions">Directions</string>
    <string name="item_and_places">Item and Places</string>
    <string name="get_point">give point</string>
    <string name="please_choose_your_point">Please choose your point:</string>
    <string name="required">(required)</string>
    <string name="place_you_suggest">Place you suggest:</string>
    <string name="please_add_photo_of_places_you_saw">Please add some photos:</string>
    <string name="please_enter_your_idea_about_the_city">Please Enter your idea about the city…</string>
    <string name="date">Date:</string>
    <string name="amount">Amount:</string>
    <string name="id">ID:</string>
    <string name="title">Title</string>
    <string name="transactions">Transactions</string>
    <string name="balance">Balance:</string>
    <string name="charge">Charge</string>
    <string name="last_charges">Last Charges:</string>
    <string name="full_name">Full name:</string>
    <string name="Setting" />
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>

</resources>