<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon_vector"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_opinion"
            android:icon="@drawable/opinion_nav_icon"
            android:title="@string/suggestions" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/transaction_icon_mini"
            android:title="@string/transactions" />
        <item
            android:id="@+id/nav_charge"
            android:icon="@drawable/charge_menu_icon"
            android:title="@string/charge"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting_icon"
            android:title="@string/profile"/>
    </group>



</menu>
