<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.paico.paico_tour.MapsActivity"
        android:label="@string/map"
        tools:layout="@layout/activity_maps" />
    <fragment
        android:id="@+id/nav_opinion"
        android:name="com.paico.paico_tour.OpinionFragment"
        android:label="@string/suggestions"
        tools:layout="@layout/opinion_about_city" />
    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.paico.paico_tour.TransactionFragment"
        android:label="@string/transactions"
        tools:layout="@layout/transaction_fragment" />
    <fragment
        android:id="@+id/nav_charge"
        android:name="com.paico.paico_tour.ChargeFragment"
        android:label="@string/charge"
        tools:layout="@layout/charge_fragment" />
</navigation>