<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vivid_cerulean">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/wall_distance"
        android:layout_marginRight="@dimen/wall_distance"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="90dp"
        android:background="@drawable/sign_up_form_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sign_up_form_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:src="@drawable/sign_up_form_pic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_up_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:background="@drawable/sign_in_up_edit_text_background"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_form_icon" />

        <EditText
            android:id="@+id/sign_up_last_name"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:background="@drawable/sign_in_up_edit_text_background"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_form_icon" />

        <EditText
            android:id="@+id/sign_up_username"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:background="@drawable/sign_in_up_edit_text_background"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_first_name" />

        <EditText
            android:background="@drawable/sign_in_up_edit_text_background"
            android:gravity="center"
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_username" />

        <EditText
            android:background="@drawable/sign_in_up_edit_text_background"
            android:gravity="center"
            android:id="@+id/sign_up_birth_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:hint="@string/birth_day"
            android:inputType="date"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_password" />

        <EditText
            android:gravity="center"
            android:background="@drawable/sign_in_up_edit_text_background"
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_birth_day" />

        <EditText
            android:gravity="center"
            android:background="@drawable/sign_in_up_edit_text_background"
            android:id="@+id/sign_up_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wall_distance"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_confirm_btn"
            android:layout_margin="@dimen/wall_distance"
            android:background="@drawable/sign_up_submit_button"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_phone_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>