<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/vivid_cerulean"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:layout_width="300dp"
        android:src="@drawable/logo"
        android:layout_height="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopf="@id/confirm_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_text"
        android:gravity="center"
        android:text="@string/confirmation_send_to_your_phone_number"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/sign_in_up_edit_text_background"
        android:inputType="numberDecimal"
        android:hint="@string/enter_confirm_code"
        android:id="@+id/confirm_code_edit_text"
        android:paddingLeft="@dimen/wall_distance"
        android:paddingRight="@dimen/wall_distance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_text"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttom_shape"
        android:textColor="@color/white"
        android:text="@string/confirm"
        android:id="@+id/confirm_code_btn"
        android:layout_marginTop="@dimen/small_margin"
        android:paddingLeft="@dimen/wall_distance"
        android:paddingRight="@dimen/wall_distance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_code_edit_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_code"
        android:layout_marginTop="@dimen/wall_distance"
        android:id="@+id/resend_code_text_btn"
        android:clickable="false"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_code_btn"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/wall_distance"
        android:text="@string/_50"
        android:id="@+id/resend_timer"
        app:layout_constraintLeft_toRightOf="@id/resend_code_text_btn"
        app:layout_constraintTop_toBottomOf="@id/confirm_code_btn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>