<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_margin">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/place_fragment_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/small_margin"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        android:padding="@dimen/small_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_weight="1.2"
        android:background="@drawable/description_background"
        android:orientation="horizontal"
        android:padding="@dimen/small_margin">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/description_background"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="@dimen/small_margin"
                    android:id="@+id/place_fragment_info_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:text="@string/place_info_form" />



            </LinearLayout>

        </ScrollView>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:background="@drawable/description_background"
            android:layout_height="0dp"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/place_fragment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/some_where"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/place_fragment_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_margin="@dimen/small_margin"
                    android:textColor="@color/black" />
                <LinearLayout
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_height="120dp">

                    <VideoView
                        android:background="@color/black"
                        android:padding="20dp"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:layout_height="match_parent"
                        android:id="@+id/place_fragment_video_view"
                        android:scaleType="centerInside"
                        android:adjustViewBounds="true" />
                </LinearLayout>





            </LinearLayout>


        </ScrollView>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin">

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/place_fragment_ticket"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/place_fragment_bottom"
                    android:drawableStart="@drawable/ticket_icon"
                    android:gravity="center"
                    android:padding="@dimen/small_margin"
                    android:text="@string/get_ticket" />

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/place_fragment_live_info"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/place_fragment_bottom"
                    android:drawableStart="@drawable/live_info_icon"
                    android:padding="@dimen/small_margin"

                    android:text="@string/live_info" />

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/place_fragment_direction"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/place_fragment_bottom"
                    android:drawableStart="@drawable/directions_icon"
                    android:padding="@dimen/small_margin"
                    android:text="@string/directions" />

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:id="@+id/place_fragment_item_and_places"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/place_fragment_bottom"
                    android:drawableStart="@drawable/item_and_places_icon"
                    android:padding="@dimen/small_margin"
                    android:text="@string/item_and_places" />


            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>