<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="horizontal"
        android:padding="@dimen/wall_distance">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/description" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/description_background"
            android:hint="Please Enter your idea about the city..."
            android:padding="@dimen/small_margin"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/please_add_photo_of_places_you_saw"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/required" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="horizontal">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/place_fragment_gallery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="80"
                android:orientation="horizontal"
                android:padding="@dimen/small_margin"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <ImageButton
                android:id="@+id/opinion_dialog_get_point_button"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="20"
                android:background="@drawable/place_fragment_bottom"
                android:gravity="center"
                android:padding="@dimen/small_margin"
                android:src="@drawable/add_icon_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:padding="@dimen/small_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/place_you_suggest"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/required" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/wall_distance"
            android:layout_weight="70" />

        <ImageButton
            style="?android:buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:layout_weight="30"
            android:background="@drawable/place_fragment_bottom"
            android:padding="@dimen/small_margin"
            android:src="@drawable/add_icon_button" />
    </LinearLayout>

</LinearLayout>